# redis-on-blockchain

./: #.gitignore#  .gitignore  README.md
redis-bridge/: Cargo.toml  Makefile
redis-bridge/src/: address.rs  main.rs
redis-bridge/src/abi/contracts/Redis.sol/: Redis.json
redis-bridge/src/commands/: connection.rs  mod.rs  server.rs  string.rs
redis-bridge/src/web3/: client.rs
redis-contract/: ERC20.sol  Makefile  hardhat.config.ts  package-lock.json  package.json
redis-contract/contracts/: Invoker.sol  Redis.sol
redis-contract/scripts/: deploy.ts
