[package]
name = "redis-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
walletconnect = { git = "https://github.com/buhe/walletconnect-rs", features = ["qr", "transport"]}
tokio = { version = "1", features = ["full"] }
web3 = "0.18.0"
futures = "0.3"
failure = "0.1"
redis-protocol = "4.1.0"
bytes = "1.1"
async-recursion = "1.0.0"